unpackaged/main/default/objects/Medallia_Staging__c/Medallia_Staging__c.object-meta.xml
<CustomObject>
    <description>Junction object for Medallia</description>
    <label>Survey Response</label>
    <nameField>
        <displayFormat>SR-{00000000}</displayFormat>
        <label>Survey Response</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Survey Responses</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>