unpackaged/main/default/objects/Medallia_Staging__c/fields/Ability_to_use_an_existing_mobile_applic__c.field-meta.xml
<CustomField>
    <fullName>Ability_to_use_an_existing_mobile_applic__c</fullName>
    <label>Used Existing Mobile App</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>