unpackaged/main/default/objects/Medallia_Staging__c/fields/Accuracy__c.field-meta.xml
<CustomField>
    <fullName>Accuracy__c</fullName>
    <label>In - Room Accuracy</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>