unpackaged/main/default/objects/Medallia_Staging__c/fields/Action_Taken__c.field-meta.xml
<CustomField>
    <fullName>Action_Taken__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Action Taken</label>
    <length>80000</length>
    <type>LongTextArea</type>
</CustomField>