unpackaged/main/default/objects/Medallia_Staging__c/fields/AgeSegment__c.field-meta.xml
<CustomField>
    <fullName>AgeSegment__c</fullName>
    <label>AgeSegment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>18-24</fullName>
            </value>
            <value>
                <fullName>25-34</fullName>
            </value>
            <value>
                <fullName>35-44</fullName>
            </value>
            <value>
                <fullName>45-54</fullName>
            </value>
            <value>
                <fullName>55-64</fullName>
            </value>
            <value>
                <fullName>65+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>