unpackaged/main/default/objects/Medallia_Staging__c/fields/Alert_close_time__c.field-meta.xml
<CustomField>
    <fullName>Alert_close_time__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Alert close time</label>
    <type>DateTime</type>
</CustomField>