unpackaged/main/default/objects/Medallia_Staging__c/fields/Alert_closed_by__c.field-meta.xml
<CustomField>
    <fullName>Alert_closed_by__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Alert closed by</label>
    <length>255</length>
    <type>Text</type>
</CustomField>