unpackaged/main/default/objects/Medallia_Staging__c/fields/Alert_owner__c.field-meta.xml
<CustomField>
    <fullName>Alert_owner__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Alert owner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>