unpackaged/main/default/objects/Medallia_Staging__c/fields/Alert_type__c.field-meta.xml
<CustomField>
    <fullName>Alert_type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Alert type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>