unpackaged/main/default/objects/Medallia_Staging__c/fields/All_log_notes_combined_if_any__c.field-meta.xml
<CustomField>
    <fullName>All_log_notes_combined_if_any__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>All log notes combined (if any)</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>