unpackaged/main/default/objects/Medallia_Staging__c/fields/Alternative_Email__c.field-meta.xml
<CustomField>
    <fullName>Alternative_Email__c</fullName>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>Alternative Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>