unpackaged/main/default/objects/Medallia_Staging__c/fields/Alternative_Phone__c.field-meta.xml
<CustomField>
    <fullName>Alternative_Phone__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Alternative Phone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>