unpackaged/main/default/objects/Medallia_Staging__c/fields/Appeasement_Comp_Dollars__c.field-meta.xml
<CustomField>
    <fullName>Appeasement_Comp_Dollars__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Appeasement Comp Dollars</label>
    <length>255</length>
    <type>Text</type>
</CustomField>