unpackaged/main/default/objects/Medallia_Staging__c/fields/Area_was_clean_and_in_good_condition__c.field-meta.xml
<CustomField>
    <fullName>Area_was_clean_and_in_good_condition__c</fullName>
    <label>Area was clean and in good condition</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>