unpackaged/main/default/objects/Medallia_Staging__c/fields/Availability_of_Information__c.field-meta.xml
<CustomField>
    <fullName>Availability_of_Information__c</fullName>
    <label>Availability of Information</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>