unpackaged/main/default/objects/Medallia_Staging__c/fields/Availability_or_convenience__c.field-meta.xml
<CustomField>
    <fullName>Availability_or_convenience__c</fullName>
    <label>Availability or convenience</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>