unpackaged/main/default/objects/Medallia_Staging__c/fields/Best_deal_or_promotion__c.field-meta.xml
<CustomField>
    <fullName>Best_deal_or_promotion__c</fullName>
    <label>Best deal or promotion</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>