unpackaged/main/default/objects/Medallia_Staging__c/fields/Best_time_to_contact__c.field-meta.xml
<CustomField>
    <fullName>Best_time_to_contact__c</fullName>
    <label>Best time to contact</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Afternoon</fullName>
            </value>
            <value>
                <fullName>Morning</fullName>
            </value>
            <value>
                <fullName>Evening</fullName>
            </value>
            <value>
                <fullName>Late at night</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>