unpackaged/main/default/objects/Medallia_Staging__c/fields/Bingo__c.field-meta.xml
<CustomField>
    <fullName>Bingo__c</fullName>
    <label>Bingo</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>