unpackaged/main/default/objects/Medallia_Staging__c/fields/Bingo_Variety_of_Games_Offered__c.field-meta.xml
<CustomField>
    <fullName>Bingo_Variety_of_Games_Offered__c</fullName>
    <label>Variety of Games Offered</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>