unpackaged/main/default/objects/Medallia_Staging__c/fields/Casino_Account_number__c.field-meta.xml
<CustomField>
    <fullName>Casino_Account_number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Casino Account_number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>