unpackaged/main/default/objects/Medallia_Staging__c/fields/CheckinAgent__c.field-meta.xml
<CustomField>
    <fullName>CheckinAgent__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CheckinAgent</label>
    <length>255</length>
    <type>Text</type>
</CustomField>