unpackaged/main/default/objects/Medallia_Staging__c/fields/CheckoutAgent__c.field-meta.xml
<CustomField>
    <fullName>CheckoutAgent__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CheckoutAgent</label>
    <length>255</length>
    <type>Text</type>
</CustomField>