unpackaged/main/default/objects/Medallia_Staging__c/fields/Comfort_of_bed__c.field-meta.xml
<CustomField>
    <fullName>Comfort_of_bed__c</fullName>
    <label>Comfort of bed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>