unpackaged/main/default/objects/Medallia_Staging__c/fields/Common_Area_Signage__c.field-meta.xml
<CustomField>
    <fullName>Common_Area_Signage__c</fullName>
    <label>Common Area Signage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>