unpackaged/main/default/objects/Medallia_Staging__c/fields/Current_status_of_alert__c.field-meta.xml
<CustomField>
    <fullName>Current_status_of_alert__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Current status of alert</label>
    <length>255</length>
    <type>Text</type>
</CustomField>