unpackaged/main/default/objects/Medallia_Staging__c/fields/Did_you_have_a_chance_to_meet_with_your__c.field-meta.xml
<CustomField>
    <fullName>Did_you_have_a_chance_to_meet_with_your__c</fullName>
    <label>Met with PDE or Casino Host on visit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>