unpackaged/main/default/objects/Medallia_Staging__c/fields/Did_you_order_in_room_dining__c.field-meta.xml
<CustomField>
    <fullName>Did_you_order_in_room_dining__c</fullName>
    <label>Did you order in-room dining?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>