unpackaged/main/default/objects/Medallia_Staging__c/fields/Ease_of_Booking__c.field-meta.xml
<CustomField>
    <fullName>Ease_of_Booking__c</fullName>
    <label>Ease of Booking</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>