unpackaged/main/default/objects/Medallia_Staging__c/fields/Ease_of_website__c.field-meta.xml
<CustomField>
    <fullName>Ease_of_website__c</fullName>
    <label>Ease of website</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>