unpackaged/main/default/objects/Medallia_Staging__c/fields/Easy_to_Find_a_Parking_Spot__c.field-meta.xml
<CustomField>
    <fullName>Easy_to_Find_a_Parking_Spot__c</fullName>
    <label>Easy to Find a Parking Spot</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>