unpackaged/main/default/objects/Medallia_Staging__c/fields/Efficiency_of_Check_Out__c.field-meta.xml
<CustomField>
    <fullName>Efficiency_of_Check_Out__c</fullName>
    <label>Efficiency of Check Out</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>