unpackaged/main/default/objects/Medallia_Staging__c/fields/Error_Description__c.field-meta.xml
<CustomField>
    <fullName>Error_Description__c</fullName>
    <description>In case of any error during insert survey from Medallia or update from Medallia</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Error Description</label>
    <length>80000</length>
    <type>LongTextArea</type>
</CustomField>