unpackaged/main/default/objects/Medallia_Staging__c/fields/Expectations_exceeded_with_beverage_serv__c.field-meta.xml
<CustomField>
    <fullName>Expectations_exceeded_with_beverage_serv__c</fullName>
    <label>Expectations exceeded with beverage serv</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>