unpackaged/main/default/objects/Medallia_Staging__c/fields/First_name__c.field-meta.xml
<CustomField>
    <fullName>First_name__c</fullName>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>First name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>