unpackaged/main/default/objects/Medallia_Staging__c/fields/FirstHotelStay__c.field-meta.xml
<CustomField>
    <fullName>FirstHotelStay__c</fullName>
    <label>FirstHotelStay</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No/Unsure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>