unpackaged/main/default/objects/Medallia_Staging__c/fields/Flex_Survey__c.field-meta.xml
<CustomField>
    <fullName>Flex_Survey__c</fullName>
    <label>Flex Survey</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No, Complete Survey</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>