unpackaged/main/default/objects/Medallia_Staging__c/fields/Free_Play__c.field-meta.xml
<CustomField>
    <fullName>Free_Play__c</fullName>
    <label>Free Play</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>