unpackaged/main/default/objects/Medallia_Staging__c/fields/Friendliness__c.field-meta.xml
<CustomField>
    <fullName>Friendliness__c</fullName>
    <label>In - Room Friendliness</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>