unpackaged/main/default/objects/Medallia_Staging__c/fields/Friendliness_of_Staff_3__c.field-meta.xml
<CustomField>
    <fullName>Friendliness_of_Staff_3__c</fullName>
    <label>Friendliness of Staff 3</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>