unpackaged/main/default/objects/Medallia_Staging__c/fields/Friendliness_of_the_Staff_Restaurant_10__c.field-meta.xml
<CustomField>
    <fullName>Friendliness_of_the_Staff_Restaurant_10__c</fullName>
    <label>Friendliness of the Staff Restaurant 10</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>