unpackaged/main/default/objects/Medallia_Staging__c/fields/Friendly_Welcome__c.field-meta.xml
<CustomField>
    <fullName>Friendly_Welcome__c</fullName>
    <label>Friendly Welcome</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>