unpackaged/main/default/objects/Medallia_Staging__c/fields/GGR__c.field-meta.xml
<CustomField>
    <fullName>GGR__c</fullName>
    <label>GGR</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>