unpackaged/main/default/objects/Medallia_Staging__c/fields/GGT__c.field-meta.xml
<CustomField>
    <fullName>GGT__c</fullName>
    <label>GGT</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>