unpackaged/main/default/objects/Medallia_Staging__c/fields/Global_Rank__c.field-meta.xml
<CustomField>
    <fullName>Global_Rank__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Global Rank</label>
    <length>255</length>
    <type>Text</type>
</CustomField>