unpackaged/main/default/objects/Medallia_Staging__c/fields/Greeted_Upon_Arrival_Restaurant_12__c.field-meta.xml
<CustomField>
    <fullName>Greeted_Upon_Arrival_Restaurant_12__c</fullName>
    <label>Greeted Upon Arrival Restaurant 12</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>