unpackaged/main/default/objects/Medallia_Staging__c/fields/HOST__c.field-meta.xml
<CustomField>
    <fullName>HOST__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>HOST</label>
    <length>255</length>
    <type>Text</type>
</CustomField>