unpackaged/main/default/objects/Medallia_Staging__c/fields/Host_assisted_while_booking_marketing_of__c.field-meta.xml
<CustomField>
    <fullName>Host_assisted_while_booking_marketing_of__c</fullName>
    <description>Host assisted while booking marketing offers and hotel reservations</description>
    <label>Host assisted - Booking &amp; Reservations</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>