unpackaged/main/default/objects/Medallia_Staging__c/fields/Hotel_Confirmation__c.field-meta.xml
<CustomField>
    <fullName>Hotel_Confirmation__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Hotel Confirmation #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>