unpackaged/main/default/objects/Medallia_Staging__c/fields/HRI_account__c.field-meta.xml
<CustomField>
    <fullName>HRI_account__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>HRI Account #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>