unpackaged/main/default/objects/Medallia_Staging__c/fields/In_room_features_TV_Radio_Furnishings__c.field-meta.xml
<CustomField>
    <fullName>In_room_features_TV_Radio_Furnishings__c</fullName>
    <label>In-room features (TV, Radio, Furnishings</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>