unpackaged/main/default/objects/Medallia_Staging__c/fields/In_Room_Quality__c.field-meta.xml
<CustomField>
    <fullName>In_Room_Quality__c</fullName>
    <label>In - Room Quality</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>