unpackaged/main/default/objects/Medallia_Staging__c/fields/IsPokerPrimary02__c.field-meta.xml
<CustomField>
    <fullName>IsPokerPrimary02__c</fullName>
    <label>IsPokerPrimary02</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No/Unsure</fullName>
            </value>
            <value>
                <fullName>Play w/o Primary</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>