unpackaged/main/default/objects/Medallia_Staging__c/fields/Language__c.field-meta.xml
<CustomField>
    <fullName>Language__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Language</label>
    <length>255</length>
    <type>Text</type>
</CustomField>