unpackaged/main/default/objects/Medallia_Staging__c/fields/Last_name__c.field-meta.xml
<CustomField>
    <fullName>Last_name__c</fullName>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>Last name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>