unpackaged/main/default/objects/Medallia_Staging__c/fields/Likelihood_to_Recommend__c.field-meta.xml
<CustomField>
    <fullName>Likelihood_to_Recommend__c</fullName>
    <label>Likelihood to Recommend</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>