unpackaged/main/default/objects/Medallia_Staging__c/fields/Lobby_and_public_areas_cleanliness__c.field-meta.xml
<CustomField>
    <fullName>Lobby_and_public_areas_cleanliness__c</fullName>
    <label>Lobby and public areas cleanliness</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>