unpackaged/main/default/objects/Medallia_Staging__c/fields/Luggage_Service__c.field-meta.xml
<CustomField>
    <fullName>Luggage_Service__c</fullName>
    <label>Luggage Service</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>