unpackaged/main/default/objects/Medallia_Staging__c/fields/Maintenance_of_room_and_bathroom__c.field-meta.xml
<CustomField>
    <fullName>Maintenance_of_room_and_bathroom__c</fullName>
    <label>Maintenance of room and bathroom</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>