unpackaged/main/default/objects/Medallia_Staging__c/fields/Menu_Selection_with_Restaurant_10__c.field-meta.xml
<CustomField>
    <fullName>Menu_Selection_with_Restaurant_10__c</fullName>
    <label>Menu Selection with Restaurant 10</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>