unpackaged/main/default/objects/Medallia_Staging__c/fields/Menu_Selection_with_Restaurant_11__c.field-meta.xml
<CustomField>
    <fullName>Menu_Selection_with_Restaurant_11__c</fullName>
    <label>Menu Selection with Restaurant 11</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>