unpackaged/main/default/objects/Medallia_Staging__c/fields/Mode_of_arrival_at_property__c.field-meta.xml
<CustomField>
    <fullName>Mode_of_arrival_at_property__c</fullName>
    <label>Mode of arrival at property</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Your Own Car</fullName>
            </value>
            <value>
                <fullName>Rental Car</fullName>
            </value>
            <value>
                <fullName>Taxi</fullName>
            </value>
            <value>
                <fullName>Uber or Lyft</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>