unpackaged/main/default/objects/Medallia_Staging__c/fields/Overall_satisfaction_at_hotel_front_desk__c.field-meta.xml
<CustomField>
    <fullName>Overall_satisfaction_at_hotel_front_desk__c</fullName>
    <label>Overall satisfaction at hotel front desk</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>