unpackaged/main/default/objects/Medallia_Staging__c/fields/Overall_satisfaction_at_hotel_frontdesk1__c.field-meta.xml
<CustomField>
    <fullName>Overall_satisfaction_at_hotel_frontdesk1__c</fullName>
    <label>Overall satisfaction at hotel frontdesk1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>