unpackaged/main/default/objects/Medallia_Staging__c/fields/Overall_Satisfaction_Service_Facility_10__c.field-meta.xml
<CustomField>
    <fullName>Overall_Satisfaction_Service_Facility_10__c</fullName>
    <label>Overall Satisfaction Service Facility 10</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>