unpackaged/main/default/objects/Medallia_Staging__c/fields/Overall_Satisfaction_Service_Facility_11__c.field-meta.xml
<CustomField>
    <fullName>Overall_Satisfaction_Service_Facility_11__c</fullName>
    <label>Overall Satisfaction Service Facility 11</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>