unpackaged/main/default/objects/Medallia_Staging__c/fields/Overall_Satisfaction_Service_Facility_12__c.field-meta.xml
<CustomField>
    <fullName>Overall_Satisfaction_Service_Facility_12__c</fullName>
    <label>Overall Satisfaction Service Facility 12</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>