unpackaged/main/default/objects/Medallia_Staging__c/fields/Overall_Satisfaction_Table_Games__c.field-meta.xml
<CustomField>
    <fullName>Overall_Satisfaction_Table_Games__c</fullName>
    <label>Overall Satisfaction : Table Games</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>