unpackaged/main/default/objects/Medallia_Staging__c/fields/Overall_Satisfaction_with_Property__c.field-meta.xml
<CustomField>
    <fullName>Overall_Satisfaction_with_Property__c</fullName>
    <label>Overall Satisfaction with Property</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Very Satisfied</fullName>
            </value>
            <value>
                <fullName>Somewhat satisfied</fullName>
            </value>
            <value>
                <fullName>Unsatisfied</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>